# Count2

./: CMakeLists.txt  ReadME.md  auxiliary.hpp  gl_classes.hpp  input.txt  input1.txt  main.cpp
shaders/: general.frag  general.vert
